<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.socialcloud.Search"
    tools:showIn="@layout/app_bar_search">

    <TextView
        android:id="@+id/textViewHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        android:gravity="center"
        android:text="@string/Search"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="246dp" />

    <EditText
        android:id="@+id/search_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewHome"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/name_or_surname"
        android:inputType="textPersonName" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="170dp"
        android:visibility="invisible"
        android:id="@+id/table_searchresult">

    <TableRow
        android:background="#3264c8"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_rowhead" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/surname_rowhead" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/city_rowhead" />
    </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/search_textview"
        android:text="@string/search_button_txt" />

    <TextView
        android:id="@+id/textView_infosearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewHome"
        android:text="@string/tap_the_id_number_to_go_to_the_profile_on_the_searched_user"
        android:textAlignment="center" />

</RelativeLayout>