<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.socialcloud.PhotoSelector">

    <!--
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    -->

    <Button
        android:id="@+id/takephoto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/b_photo"
        app:layout_constraintBaseline_toBaselineOf="@+id/viewgallery"
        app:layout_constraintEnd_toStartOf="@+id/viewgallery"
        app:layout_constraintStart_toStartOf="parent"></Button>

    <Button
        android:id="@+id/viewgallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="129dp"
        android:layout_marginEnd="8dp"
        android:text="@string/b_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"></Button>

    <ImageView
        android:id="@+id/imageViewer"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:maxHeight="500dp"
        android:maxWidth="500dp"
        android:minHeight="50dp"
        android:minWidth="50dp"
        app:layout_constraintBottom_toTopOf="@+id/takephoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_menu_account_box" android:contentDescription="@string/Preview" />

    <Button
        android:id="@+id/confirm_image_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/send_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewgallery" />


</android.support.constraint.ConstraintLayout>
